Fix image wrap

--- a/style.css
+++ b/style.css
@@ -72,6 +72,7 @@ img {
 .section-one {
   background-color: #1f2937;
   color: white;
+  flex-wrap: wrap;
 }
 
 .section-two {
